# Quantitative_A-shares

./: .gitattributes  .gitignore  DESIGN.md  HF_SYNC_GUIDE.md  README.md  pyproject.toml  wechat_search_config.ini
.github/workflows/: daily_ingest.yml  update_stock_data.yml
.streamlit/: config.toml
data/concepts/: ths_concept_board.csv
data/limit_up/: 2023.csv  2024.csv  2025_2026.csv
deploy/: README.md  api.service  dashboard.service  refresh_data.sh  refresh_data.timer  update.sh  verify_cache.py  warmup_redis.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
results/2022/: break60_ma_next30d.xlsx
results/2023/: break60_ma_next30d.xlsx  buyclose_sellnext.xlsx
results/2024/: break60_ma_next30d.xlsx  buyclose_sellnext.xlsx  range_details.csv  range_summary.csv
results/2025/: break60_ma_next30d.xlsx  break60_ma_next30d_backup.xlsx  buyclose_next1d_next10d.xlsx  buyclose_sellnext.xlsx  full_year_backtest_enhanced.xlsx  grid_best_trades.csv  grid_results.csv  limit_up_pctchg9.9_next30d.xlsx  range_details.csv  range_summary.csv  stock_backtest_results.xlsx  strict_grid_best_trades.csv  strict_grid_results.csv  test_runupGT20_next30d.xlsx
scripts/: fetch_all_parquet.py  fetch_ths_hot_parquet.py  ingest_company_info.py  ingest_ths_hot.py  load_all_parquet.py  load_ths_hot_parquet.py  migrate_parquet_to_duckdb.py  reingest_all.py
src/: cache.py  db.py  metrics.py
src/analysis/: surf_return.py  (+3 more)
tests/: conftest.py  test_api.py  test_ingest_db.py  test_metrics_db.py
(+63 files in other folders)
