[project]
name = "wechatnum"
version = "2.0.0"
description = "A股股价看板：DuckDB + FastAPI + React，前复权日线可视化"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "tqdm",
    "matplotlib",
    "requests",
    "redis>=5.0.0,<6",
    "tushare>=1.4.29",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]
